Archive2/ea/211d4f72492e37/main.cpp
struct S {
    int i;
};

static const S s;

int main()
{
}
